# PeanutButterUltima

./: .gitignore  .rgignore  CMakeLists.txt  CMakePresets.json  Makefile  MergePeanutButter.hpp  README.md  algorithm_bundle.txt  algorithm_decode.txt  algorithm_recover.txt  algorithm_unbundle.txt  archive_format_example.txt  automate_l1_payload_sweep.py  automate_l1_payload_sweep_output.txt  build_qt_release.sh  bundle_logging.txt  cancel_button_plans.txt  complaints.txt  config.json  example_2026_03_10_02_32.txt  example_2026_03_10_02_55.txt  example_2026_03_10_02_56.txt  example_2026_03_10_03_04.txt  example_2026_03_10_03_06.txt  example_2026_03_10_03_08.txt  example_2026_03_10_03_09.txt  example_2026_03_10_03_11.txt  example_2026_03_10_03_38.txt  example_2026_03_10_03_42.txt  example_2026_03_10_03_43.txt  example_2026_03_10_03_46.txt  example_2026_03_10_03_48.txt  example_2026_03_10_03_49.txt  file_format.txt  final_spec_algorithms_detailed.txt  final_spec_algorithms_high_level.txt  final_spec_conclusions.txt  final_spec_error_codes.txt  final_spec_file_format.txt  final_spec_format_example.txt  (+33 more)
Encryption/: Crypt.cpp  Crypt.hpp  CryptMode.hpp  EncryptionLayer.cpp  LayeredCrypt.cpp  LayeredCrypt.hpp
_docs/: archive_format_example_a.txt  archive_format_example_b.txt  archive_format_example_c.txt  archive_format_spec.txt  archive_header_rules.txt  error_code_specs.txt  fence_handling.txt  fence_test_case_flow.txt  file_and_folder_format_specs.txt  final_memory_spec.txt  manifest_format_specs.txt  planned_fences_tests.txt  recovery_and_unpack_flow.txt  recovery_header_rules.txt  test_generator_audit_2026_03_10.txt  testing_requirements.txt  tree_validation_report_generated.txt  unbundle_set_normalization_rules.txt  unpack_integer_failures.txt
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake
codex_sandbox/: roundtrip_smoke.cpp  roundtrip_smoke_bin  run_roundtrip_smoke.sh
example_old/: generate_example_bin  main_generate_example.cpp  run_generate_example.sh
input/: usa.txt
quick_tests/: QuickSmoke.cpp
src/: AppCore.cpp  AppCore.hpp  AppCore_DecodeShared.cpp  AppCore_Fences.cpp  AppCore_Fences.hpp  AppCore_Helpers.cpp  AppCore_Helpers.hpp  AppCore_Helpers_Gold.cpp  AppCore_Helpers_Gold.hpp  AppCore_MemoryOwners.cpp  AppCore_MemoryOwners.hpp  AppCore_Pack.cpp  AppCore_Recover.cpp  AppCore_Stackers.cpp  AppCore_Stackers.hpp  AppCore_Unpack.cpp  AppCore_Unverified.cpp  AppCore_Unverified.hpp  AppCore_Validate.cpp  AppCore_Validate.hpp  AppShell.cpp  AppShell_ArchiveFormat.cpp  AppShell_ArchiveFormat.hpp  AppShell_Bundle.cpp  AppShell_Bundle.hpp  AppShell_Common.cpp  AppShell_Common.hpp  AppShell_Extended_Bundle.cpp  AppShell_Extended_Bundle.hpp  AppShell_Extended_Types.cpp  AppShell_Extended_Types.hpp  AppShell_Sanity.cpp  AppShell_Sanity.hpp  AppShell_Types.cpp  AppShell_Types.hpp  AppShell_Unbundle.cpp  AppShell_Unbundle.hpp  FormatConstants.hpp  PeanutButter.hpp  QtAppController.cpp  (+4 more)
src/Bundle/: BundleDiscovery.cpp  BundleDiscovery.hpp  BundleFlight.cpp  BundleFlight.hpp  LogicalRecordEncoder.cpp  LogicalRecordEncoder.hpp
src/Decode/: DecodeDiscovery.cpp  DecodeDiscovery.hpp  DecodeFlight.cpp  DecodeFlight.hpp  LogicalRecordDecoder.cpp  LogicalRecordDecoder.hpp
src/Encryption/: Crypt.cpp  Crypt.hpp  CryptMode.hpp  EncryptionLayer.hpp  RotateMaskBlockCipher.hpp
src/IO/: FileReadStream.hpp  FileSystem.cpp  FileSystem.hpp  FileWriteStream.hpp  LocalFileSystem.cpp  LocalFileSystem.hpp  PartialFileWriter.hpp
src/Memory/: HeapBuffer.hpp
test_starter_kit/: .gitignore  ARCHIVE_LAYOUT_FORMAT.md  README.md  run_starter_kit_example.sh
test_starter_kit/examples/: ExampleApiAccess.cpp
test_starter_kit/include/: DeterministicRng.hpp  EmptyTestCrypt.hpp  MockFileSystem.hpp  MockHardDrive.hpp  StarterKitHelpers.hpp  TestScenarioHelpers.hpp
test_starter_kit/src/: EmptyTestCrypt.cpp  MockFileSystem.cpp  MockHardDrive.cpp  StarterKitHelpers.cpp  TestScenarioHelpers.cpp
testing/brew/: Test_15_RandomSmallRecoveryJobs_Iterative.cpp  Test_ArchiveFormatExample_A.cpp  Test_ArchiveFormatExample_A_Encrypted.cpp  Test_ArchiveFormatExample_B.cpp  Test_ArchiveFormatExample_B_Encrypted.cpp  Test_ArchiveFormatExample_C_Encrypted.cpp  Test_IntegerFailureCases_MNF_FNL_001.cpp  Test_IntegerFailureCases_MNF_FNL_002.cpp  Test_IntegerFailureCases_MNF_FNL_003.cpp  Test_IntegerFailureCases_RCV_RHD_001.cpp  Test_IntegerFailureCases_UNP_EOF_001.cpp  Test_IntegerFailureCases_UNP_EOF_002.cpp  Test_IntegerFailureCases_UNP_FDL_001.cpp  Test_IntegerFailureCases_UNP_FDL_002.cpp  Test_IntegerFailureCases_UNP_FDL_003.cpp  Test_IntegerFailureCases_UNP_FDL_004.cpp  Test_IntegerFailureCases_UNP_FNL_001.cpp  Test_IntegerFailureCases_UNP_FNL_002.cpp  Test_IntegerFailureCases_UNP_FNL_003.cpp  Test_IntegerFailureCases_UNP_FNL_004.cpp  Test_IntegerFailureCases_UNP_FNL_005.cpp  Test_IntegerFailureCases_UNP_RHD_001.cpp  Test_IntegerFailureCases_UNP_RHD_002.cpp  Test_IntegerFailureCases_UNP_RHD_003.cpp  Test_IntegerFailureCases_UNP_RHD_004.cpp  Test_MockHardDrive_ArchiveFormatExample.cpp
testing/common/: Test_Execute_BundleAndUnbundle.cpp  Test_Execute_BundleAndUnbundle.hpp  Test_IntegerFailureCaseCommon.cpp  Test_IntegerFailureCaseCommon.hpp  Test_RecoveryPlan.cpp  Test_RecoveryPlan.hpp  Test_Utils.cpp  Test_Utils.hpp  Test_Wrappers.cpp  Test_Wrappers.hpp  Validate_Archive.cpp  Validate_Archive.hpp  Validate_ArchiveHeader.cpp  Validate_ArchiveHeader.hpp  Validate_File.cpp  Validate_File.hpp  Validate_Manifest.cpp  Validate_Manifest.hpp  Validate_RecoveryHeader.cpp  Validate_RecoveryHeader.hpp
testing/mocks/: MockFileSystem.cpp  MockFileSystem.hpp  MockHardDrive.cpp  MockHardDrive.hpp
tests/: TestMain.cpp  test_main.cpp
tests/codex/: Test_Fences_FileContent_InRecoveryHeader_RoundTrip.cpp  Test_Fences_FileName_Zero_Recover_Tdd.cpp
tests/common/: Test_Execute_Bundle.cpp  Test_Execute_Bundle.hpp  Test_Execute_FenceRoundTrip.cpp  (+14 more)
tools/: expander_shell_main.cpp
(+172 files in other folders)
